--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,11 +3,11 @@
 ---
 
 // Colors
-$primary: #E5261F;
-$secondary: #f88379;
+$primary: #264653;
+$secondary: #2A9D8F;
 $black: #2f2f41;
 $white: #ffffff;
-$white-offset: #fff6f8;
+$white-offset: #EFFBF9;
 $steel: #5C5A5A;
 
 // Links
